# vcsettings

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/dynaconflib/: __init__.py  __main__.py
src/gittree_settings/: __init__.py  main.py
src/vcsettings/: main.py
tests/: test_gittree_settings.py  test_vcsettings.py
