[project]
name = "gittree-settings"
version = "0.1.0"
description = "A git-like tree structure for storing settings"
readme = "README.md"
authors = [
    { name = "Pedro Brochado", email = "pedropsb95@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
gittree = "gittree_settings.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/gittree-settings"
"Bug Tracker" = "https://github.com/yourusername/gittree-settings/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gittree_settings"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pre-commit>=3.5.0", "ruff>=0.3.0", "mypy>=1.8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

